tests/transpiler/x/hs/map_nested_assign.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/map_nested_assign.hs:10:23: error:
    • Couldn't match type ‘[Char]’ with ‘Int’
      Expected: Int
        Actual: String
    • In the second argument of ‘(!!)’, namely ‘"outer"’
      In the first argument of ‘(!!)’, namely ‘(_data !! "outer")’
      In the first argument of ‘print’, namely
        ‘(((_data !! "outer") !! "inner"))’
   |
10 |     print (((_data !! "outer") !! "inner"))
   |                       ^^^^^^^

/workspace/mochi/tests/transpiler/x/hs/map_nested_assign.hs:10:35: error:
    • Couldn't match type ‘[Char]’ with ‘Int’
      Expected: Int
        Actual: String
    • In the second argument of ‘(!!)’, namely ‘"inner"’
      In the first argument of ‘print’, namely
        ‘(((_data !! "outer") !! "inner"))’
      In a stmt of a 'do' block: print (((_data !! "outer") !! "inner"))
   |
10 |     print (((_data !! "outer") !! "inner"))
   |                                   ^^^^^^^
