tests/transpiler/x/hs/map_nested_assign.hs
{-# LANGUAGE DuplicateRecordFields #-}
{-# LANGUAGE OverloadedRecordDot #-}
{-# LANGUAGE NoFieldSelectors #-}
-- Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:46 GMT+7
import qualified Data.Map as Map
_data = 2

main :: IO ()
main = do
    print (((_data !! "outer") !! "inner"))
